// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaptureCycle.js should not error out when there is no captureCycleIndex 1`] = `
<section
  className="capture-cycle--card"
>
  <h2
    className="capture-cycle--timestamp"
  >
    Capture Cycle
    <span>
       at 
      12:00:00 AM
      :
    </span>
  </h2>
  <ul
    className="capture-cycle--components"
  >
    <ComponentTiming
      loadTime={9.2}
      name="componentName"
    />
  </ul>
</section>
`;

exports[`CaptureCycle.js should not error out when there is no timestamp 1`] = `
<section
  className="capture-cycle--card"
>
  <h2
    className="capture-cycle--timestamp"
  >
    Capture Cycle
  </h2>
  <ul
    className="capture-cycle--components"
  >
    <ComponentTiming
      loadTime={9.2}
      name="componentName"
    />
  </ul>
</section>
`;

exports[`CaptureCycle.js should render the capture cycle 1`] = `
<section
  className="capture-cycle--card"
>
  <h2
    className="capture-cycle--timestamp"
  >
    Capture Cycle
    <span>
       at 
      12:00:00 AM
      :
    </span>
  </h2>
  <ul
    className="capture-cycle--components"
  >
    <ComponentTiming
      loadTime={9.2}
      name="componentName"
    />
  </ul>
</section>
`;
